# bpfsamples

./: Cargo.toml  README.md
cgroup_skb/: Cargo.toml  build.rs
cgroup_skb/src/: main.rs
cgroup_skb/src/bpf/: cgroup_skb.bpf.c  cgroup_skb.h
kprobe/: Cargo.toml  build.rs
kprobe/src/: main.rs
kprobe/src/bpf/: kprobe.bpf.c  kprobe.h
sk_lookup/: Cargo.toml  build.rs
sk_lookup/src/: main.rs
sk_lookup/src/bpf/: sk_lookup.bpf.c  sk_lookup.h
sk_msg/: Cargo.toml  build.rs
sk_msg/src/: main.rs
sk_msg/src/bpf/: sk_msg.bpf.c  sk_msg.h
sk_skb/: Cargo.toml  build.rs
sk_skb/src/: main.rs
sk_skb/src/bpf/: sk_skb.bpf.c  sk_skb.h
socket/: Cargo.toml  build.rs
socket/src/: main.rs
socket/src/bpf/: socket.bpf.c  socket.h
sockops/: Cargo.toml  build.rs
sockops/src/: main.rs
sockops/src/bpf/: sockops.bpf.c  sockops.h
tracing/fentry/: Cargo.toml  build.rs
tracing/fentry/src/: lib.rs  main.rs
tracing/fentry/src/bpf/: fentry.bpf.c  fentry.h
tracing/iter/: Cargo.toml  build.rs
tracing/iter/src/: lib.rs  main.rs
tracing/iter/src/bpf/: iter.bpf.c  iter.h
xdp/denyicmp/: Cargo.toml  build.rs
xdp/denyicmp/src/: main.rs
xdp/denyicmp/src/bpf/: denyicmp.bpf.c  denyicmp.h
xdp/pingserver/: Cargo.toml  build.rs
xdp/pingserver/src/: main.rs
xdp/pingserver/src/bpf/: pingserver.bpf.c  pingserver.h  vmlinux.h
