[package]
name = "pingserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
libbpf-rs = "0.20"
nix = "0.26.2"
once_cell = "1.17.1"
structopt = "0.3.26"

[build-dependencies]
libbpf-cargo = "0.20"
bindgen = "0.60.1"
